# src/index.js
@@ -13,11 +13,10 @@ import swaggerDocument from '../public/api-docs.json';
 
 import { sequelize } from "./models/index";
 import tripRouter from "../src/routes/trip.routes";
-import userRouter from "./routes/user.routes";
-import rolesRouter from "./routes/role.routes";
-import companiesRouter from "./routes/company.routes";
-import bookingsRouter from "./routes/booking.routes";
-import accommodationRouter from "./routes/accommodation.routes";
+import userRouter from "../src/routes/user.routes";
+import rolesRouter from "../src/routes/role.routes";
+import feedbackRouter from './routes/feedback.routes';
+import accommodationRouter from './routes/accommodation.routes';
 
 const app = express();
 dotenv.config({ path: '../.env' });
@@ -31,13 +30,14 @@ app.use(express.urlencoded({ extended: true }));
 
 app.use("/api/v1/trips/", tripRouter);
 app.use('/api/v1/users/', userRouter);
-
-app.use("/api/v1/roles", rolesRouter);
-app.use("/api/v1/companies", companiesRouter);
-app.use("/api/v1/bookings", bookingsRouter);
-app.use("/api/v1/accommodations", accommodationRouter);
-app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
-
+app.use('/api/v1/roles', rolesRouter);
+app.use('/api/v1/accommodations', accommodationRouter);
+app.use('/api/v1/feedback', feedbackRouter);
+app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+app.get('/', (req, res) => {
+  console.log(`This is email ${req.session.email}`);
+  res.send('Welcome to strikers-bn-be APIs');
+});
 app.get('/', (req, res) => {
   res.send('Welcome to strikers-bn-be APIs');
 });
